--- a/sigproc.bib
+++ b/sigproc.bib
@@ -39,7 +39,7 @@
 	NOTE = {Accessed: 2017-3-5}
 }
 
-@MISC{ndn-py,
+@MISC{pyndn,
 	AUTHOR = {Thompson, Jeff and Bannis, Adeola and spencerucla and Batista, Pedro},
 	TITLE = {{PyNDN: A Named Data Networking client library with TLV wire format support in native Python}},
 	HOWPUBLISHED = {\url{https://github.com/named-data/PyNDN2}},
@@ -65,4 +65,25 @@
 	TITLE = {{Cipher Encryption Algorithms}},
 	HOWPUBLISHED = {\url{http://docs.oracle.com/javase/8/docs/technotes/guides/security/StandardNames.html#Cipher}},
 	NOTE = {Accessed: 2017-4-30}
+}
+
+@MISC{pycrypto,
+	AUTHOR = {{Dwayne Litzenberger}},
+	TITLE = {{PyCrypto - The Python Cryptography Toolkit}},
+	HOWPUBLISHED = {\url{https://www.dlitz.net/software/pycrypto/}},
+	NOTE = {Accessed: 2017-5-19}
+}
+
+@MISC{nfd,
+	AUTHOR = {{Named Data Networking}},
+	TITLE = {{NFD - Named Data Networking Forwarding Daemon}},
+	HOWPUBLISHED = {\url{https://named-data.net/doc/NFD/current/}},
+	NOTE = {Accessed: 2017-5-19}
+}
+
+@MISC{python3,
+	AUTHOR = {{Python Software Foundation}},
+	TITLE = {{Python 3.6.1 documentation}},
+	HOWPUBLISHED = {\url{https://docs.python.org/3/}},
+	NOTE = {Accessed: 2017-5-19}
 }
