--- a/sigproc.bib
+++ b/sigproc.bib
@@ -87,3 +87,25 @@
 	HOWPUBLISHED = {\url{https://docs.python.org/3/}},
 	NOTE = {Accessed: 2017-5-19}
 }
+
+@misc{rfc8018,
+	author="K. Moriarty and B. Kaliski and A. Rusch",
+	title="{PKCS \#5: Password-Based Cryptography Specification Version 2.1}",
+	howpublished="RFC 8018 (Informational)",
+	series="Internet Request for Comments",
+	type="RFC",
+	number="8018",
+	pages="1--40",
+	year=2017,
+	month=jan,
+	issn="2070-1721",
+	publisher="RFC Editor",
+	institution="RFC Editor",
+	organization="RFC Editor",
+	address="Fremont, CA, USA",
+	url="https://www.rfc-editor.org/rfc/rfc8018.txt",
+	key="RFC 8018",
+	abstract={This document provides recommendations for the implementation of password-based cryptography, covering key derivation functions, encryption schemes, message authentication schemes, and ASN.1 syntax identifying the techniques. This document represents a republication of PKCS \#5 v2.1 from RSA Laboratories' Public-Key Cryptography Standards (PKCS) series. By publishing this RFC, change control is transferred to the IETF. This document also obsoletes RFC 2898.},
+	keywords="password-based encryption, password-based key derivation, salt",
+	doi="10.17487/RFC8018",
+}
