--- a/main.tex
+++ b/main.tex
@@ -29,14 +29,14 @@
 \begin{abstract}
 This report outlines the results of my efforts on ndnMouse, my class project for CS 217B, as well as my Master's Capstone project. It is open-sourced on \href{https://github.com/wminner/ndnMouse}{Github} under the GNU public license, and available on the \href{https://play.google.com/store/apps/details?id=edu.ucla.cs.ndnmouse}{Google Play App Store}. The goal of ndnMouse is to securely and efficiently control one or more personal computers via remote mouse movement and rudimentary keyboard commands from your phone, running the communication protocol over Named Data Networking (NDN)~\cite{ndn}. In order to compare the design and performance benefits of NDN, ndnMouse also supports communication over UDP. Implementation of both protocols resulted in fairly unique server and clients designs. The pros and cons of each will be explored in this report.
 
-Section 1 will review the features and use cases of ndnMouse, with more detail of the command protocol in Section 2. Details on the security features will be given in section 3, with challenges and trade-offs I have overcome listed in section 4. Performance analysis comparing NDN and UDP implementations is in section 5. Section 6 explores extensions and future use cases for ndnMouse, and section 7 looks at a few of the related works. Finally section 8 concludes this report. Additionally screenshots of the application are in section 7, the Appendix.
+Section 1 will review the features and use cases of ndnMouse, with more detail of the command protocol in Section 2. Details on the security features will be given in section 3, with challenges and trade-offs I have overcome listed in section 4. Performance analysis comparing NDN and UDP implementations is in section 5. Section 6 explores extensions and future use cases for ndnMouse, and finally section 8 concludes this report. Additionally screenshots of the application are in section 7, the Appendix.
 \end{abstract}
 
 \keywords{NDN, Mouse, Keyboard, Remote Access, Security}
 
 % ==============================================================================
 \section{Overview}
-NdnMouse provides remote access to the mouse and keyboard of a PC in order to provide a simple and convenient way to wirelessly interface with your computer. The main use case was to support wireless slideshow/powerpoint control, removing the need for a proprietary piece of hardware (such as a USB clicker device). Anecdotal evidence suggests that users of these devices encounter a variety of issues such as: drained batteries, poor connection, and general hardware failure. Additionally a presenter must also carry around the clicker hardware, which has no other than slideshow control. NdnMouse removes the need for a specialized clicker and adds remote slideshow control to something most people already carry around in their pockets, a smart phone. 
+NdnMouse provides remote access to the mouse and keyboard of a PC in order to provide a simple and convenient way to wirelessly interface with your computer. The main use case was to support wireless slideshow/powerpoint control, removing the need for a proprietary piece of hardware (such as a USB/bluetooth clicker device). Anecdotal evidence suggests that users of these devices encounter a variety of issues such as: drained batteries, poor connection, and general hardware failure. Additionally a presenter must also carry around the clicker hardware, which has no other than slideshow control. NdnMouse removes the need for a specialized clicker and adds remote slideshow control to something most people already carry around in their pockets, a smart phone. 
 
 By taking advantage of the local WiFi access point or the phone's WiFi hotspot feature, a user can use their Android smart phone as a virtual touchpad and simple keyboard, providing the functionality needed to step through a powerpoint presentation without any additional hardware. NdnMouse also may be of use during times of hardware failure, providing an emergency backup mouse or keyboard when the user has limited options to interface with their PC.
 
@@ -109,8 +109,8 @@ To allow multiple consumers to share the same data packets, I chose to use a con
 		\begin{tabular}{| l | l |}
 			\hline
 			 Interest Name & Purpose \\ \hline\hline
-			\texttt{/ndnmouse/move/} & Movement Data\\ \hline
-			\texttt{/ndnmouse/command/} & Command Data\\ \hline
+			\texttt{/ndnmouse/move} & Movement Data\\ \hline
+			\texttt{/ndnmouse/command} & Command Data\\ \hline
 			\texttt{/ndnmouse/seq} & Sequence Number Sync\\ \hline
 			\texttt{/ndnmouse/salt} & Password Salt Data\\ \hline
 		\end{tabular}
@@ -127,7 +127,7 @@ For non-secure communication, mouse packets are exactly the same as the message 
 	\hypertarget{fig:mousePacketDescription}{}
 \begin{lstlisting}
                                     1                   2                   3
-bit num:        0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1 2
+bit number:     0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1 2
                 -----------------------------------------------------------------
 contents:       |              IV               |  Seq  |  Message (PKCS5 pad)  |
                 -----------------------------------------------------------------
@@ -193,21 +193,48 @@ While these arguments may not full justify stepping away from the ideal NDN work
 
 \subsection{UDP vs NDN}
 
+\begin{figure}
+	\centering
+	\includegraphics[width=8cm]{plots/ubuntu}
+	\caption{Ubuntu mouse movement performance benchmark}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=8cm]{plots/osx}
+	\caption{OSX mouse movement performance benchmark}
+\end{figure}
+
 \subsection{Event Driven Architecture}
 
-\subsection{Stateful Multi-Threaded Architecture}
+\subsection{Multi-Threaded Architecture}
 
 % ==============================================================================
 \section{Extensions}
+NdnMouse was primarily developed in 7 weeks, starting from the beginning of April 2017. There are still many unimplemented features and optimizations that could benefit the application, but were outside the scope of the project's time frame. As such, extensions to ndnMouse will be listed here to show how this project could improve to possibly become a real consumer application.
 
 \subsection{NDN Performance Optimization}
+As shown in the performance section, ndnMouse's NDN communication protocol does not perform as well as its UDP sibling, for a single connected client. This could be due to a variety of reasons, such as NFD running as a software layer instead of integrated into the kernel. However this cannot easily be changed, so instead we look to ndnMouse's server implementation for NDN optimization opportunities.
 
-\subsection{Many Mouse, One Computer}
+Mouse movement update consistency seem to be the main performance issue for the NDN communication protocol. Currently the NDN server architecture has only one outstanding (pending) interest at all times for collecting movement data. This means that an interest much be sent out across the network, be processed and fulfilled by the producer, then the resulting data must traverse back through the network, following the pending interest table (PIT), to the consumer. Only upon receiving the data back, can the NDN consumer send another movement interest.
+
+%If we define the time it takes to traverse the network from consumer to producer (or vice versa) as \textit{x}, then received movement data will be least \textit{x} time units stale. The data is considered fresh when it is created by the producer, immediately after receiving the interest. This latency cannot be reduced by changing the producer/consumer implementation.
+
+In order to smooth out mouse movement, data must be returned faster and at a more consistent speed. There might be a performance gain if ndnMouse consumers sends two or more outstanding movement interests at any one time (instead of just one). Having parallel pending interests could loosen the movement update bottleneck, as long as NFD is not causing the issue. However more experimentation would be required to gain any additional insight on this idea.
+
+One last idea for better NDN performance could be condensing the number of interests sent by the consumer. If the producer packed all its data into a single larger data packet (containing movement, clicks, commands, key presses, etc...), then this would reduce the number of interests the producer would need to process. This uses a well known operating system concept called \textit{batching} to reduce overhead. Decreasing overhead on the producer's side may be a practical idea, but the complexity of data packing and unpacking would certainly increase as a trade-off.
+
+\subsection{Many Mice, One PC}
+A common feature request\footnote{Idea credit goes to Dr. Lixia Zhang.} for ndnMouse asks for support of many mice controlling one computer. This would allow local collaboration on a single PC, letting each user have a say in what gets shown on-screen. For example, the speaker may click quickly through a slide with an important point, leaving some viewers confused. Any person using the control application, may then be able to click backward to the important slide and ask their question aloud. This avoids the awkward feedback loop of the viewer asking the speaker to click back once more, and once more, etc... to reach the slide in question.
+
+In order to support this feature, ndnMouse would require an architectural rework. Currently the phone acts as the server/producer, and the multiple PCs connecting to it act as the clients/consumers. Each PC must reach out to connect to the desired phone (via IP address). The many mice to one pc relationship inverts this, so that the PC is now the server/producer, serving the many mice connecting to it. Mice would have to explicitly reach in to connect to single PC, entering its IP address to properly connect. There may be a feasible solution that allows both relationships to work (one mouse to many PCs, or many mice to one PC), but more architectural design work is required to understand the additional requirements this would impose on ndnMouse.
 
 \subsection{Cross-Computer Mouse Support}
+In my view, the long term goal for ndnMouse was to create an application that could eventually control multiple PCs seamlessly. For example, moving your mouse from the screen of a laptop, to another monitor of a completely separate desktop, as if they were the same computer. Sharing a mouse and keyboard between computers over the network is not a new concept. The desktop application Synergy~\cite{synergy} has been around since 2001, and runs on all major desktop operating systems. It basically allows multiple computers with different operating systems to share the same mouse and keyboard, seamlessly transitioning the mouse across screens as if all the monitors were connected to a single computer.
 
-% ==============================================================================
-\section{Related Works}
+NdnMouse could fill a similar niche as Synergy, but also bring additional features and security with it via NDN. Communication between the server and clients would be more efficient when NDN's built-in multi-casting support is exploited. NDN packet signatures could be optionally validated for extra confidence when verifying identities. Lastly, the Android-based server front end of ndnMouse could also be ported to a desktop application to take advantage of real mouse and keyboard hardware (similar to Synergy).
+
+These are just some of the extension ideas that show the promise of ndnMouse, and how it could continue to evolve and provide the benefits of NDN to more users.
 
 % ==============================================================================
 \section{Conclusion}
@@ -231,57 +258,57 @@ Screenshots of the Android and PC applications follow. The Android app can be do
 \begin{figure}[ht]
 	\hypertarget{fig:start}{}
 	\centering
-	\caption{Start screen}
 	\includegraphics[width=6cm]{screenshots/start}
+	\caption{Start screen}
 \end{figure}
 
 \begin{figure}[ht]
 	\hypertarget{fig:settings}{}
 	\centering
-	\caption{Settings screen}
 	\includegraphics[width=6cm]{screenshots/settings}
+	\caption{Settings screen}
 \end{figure}
 
 \begin{figure}[ht]
 	\hypertarget{fig:touchpad}{}
 	\centering
-	\caption{Touchpad screen}
 	\includegraphics[width=6cm]{screenshots/touchpad}
+	\caption{Touchpad screen}
 \end{figure}
 
 \begin{figure}[ht]
 	\hypertarget{fig:keyboard}{}
 	\centering
-	\caption{Keyboard screen}
 	\includegraphics[width=6cm]{screenshots/keyboard}
+	\caption{Keyboard screen}
 \end{figure}
 
 \begin{figure}[ht]
 	\hypertarget{fig:custom\_type\_message}{}
 	\centering
-	\caption{Custom typed message entry}
 	\includegraphics[width=6cm]{screenshots/custom_type_message}
+	\caption{Custom typed message entry}
 \end{figure}
 
 \begin{figure}[ht]
 	\hypertarget{fig:client1}{}
 	\centering
-	\caption{PC program IP address entry}
 	\includegraphics[width=11cm]{screenshots/client1}
+	\caption{PC program IP address entry}
 \end{figure}
 
 \begin{figure}[ht]
 	\hypertarget{fig:client2}{}
 	\centering
-	\caption{PC program password entry}
 	\includegraphics[width=11cm]{screenshots/client2}
+	\caption{PC program password entry}
 \end{figure}
 
 \begin{figure}[ht]
 	\hypertarget{fig:client3}{}
 	\centering
-	\caption{PC program running}
 	\includegraphics[width=11cm]{screenshots/client3}
+	\caption{PC program running}
 \end{figure}
 
 \end{document}
