--- a/sigproc.bib
+++ b/sigproc.bib
@@ -88,7 +88,7 @@
 	NOTE = {Accessed: 2017-5-19}
 }
 
-@misc{rfc8018,
+@MISC{rfc8018,
 	author="K. Moriarty and B. Kaliski and A. Rusch",
 	title="{PKCS \#5: Password-Based Cryptography Specification Version 2.1}",
 	howpublished="RFC 8018 (Informational)",
@@ -108,4 +108,11 @@
 	abstract={This document provides recommendations for the implementation of password-based cryptography, covering key derivation functions, encryption schemes, message authentication schemes, and ASN.1 syntax identifying the techniques. This document represents a republication of PKCS \#5 v2.1 from RSA Laboratories' Public-Key Cryptography Standards (PKCS) series. By publishing this RFC, change control is transferred to the IETF. This document also obsoletes RFC 2898.},
 	keywords="password-based encryption, password-based key derivation, salt",
 	doi="10.17487/RFC8018",
+}
+
+@MISC{synergy,
+	AUTHOR = {{Symless}},
+	TITLE = {{Synergy - Mouse and keyboard sharing software}},
+	HOWPUBLISHED = {\url{https://symless.com/synergy}},
+	NOTE = {Accessed: 2017-5-22}
 }
